--- a/deliverables/queens/neutron-lbaas-dashboard.yaml
+++ b/deliverables/queens/neutron-lbaas-dashboard.yaml
@@ -18,5 +18,12 @@ releases:
       - hash: 6777fdc3a290fc159d4ff93b556f506ed8cb32ee
         repo: openstack/neutron-lbaas-dashboard
     version: 4.0.0.0b3
+  - projects:
+      - hash: c56d3f3e2254d752cae05dbc728ab354eae101fd
+        repo: openstack/neutron-lbaas-dashboard
+    version: 4.0.0.0rc1
+branches:
+  - location: 4.0.0.0rc1
+    name: stable/queens
 repository-settings:
   openstack/neutron-lbaas-dashboard: {}
