--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -2,6 +2,7 @@
 include-pypi-link: yes
 storyboard: 909
 release-model: cycle-with-milestones
+release-notes: https://docs.openstack.org/releasenotes/octavia-dashboard/unreleased.html
 release-type: horizon
 team: octavia
 type: horizon-plugin
@@ -18,5 +19,16 @@ releases:
       - hash: 6407785f3c01586cceda760934cd088873253b86
         repo: openstack/octavia-dashboard
     version: 1.0.0.0b3
+  - projects:
+      - hash: eff100522a7ad5904db95468199489656c894727
+        repo: openstack/octavia-dashboard
+    version: 1.0.0.0rc1
+branches:
+  - location: 1.0.0.0rc1
+    name: stable/queens
+cycle-highlights:
+  - The initial release of the Octavia dashboard for Horizon includes
+    significantly improved load balancer detail pages and workflows compared
+    to the, now deprecated, neutron-lbaas-dashboard.
 repository-settings:
   openstack/octavia-dashboard: {}
