--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 9ac1d6b3e73f8b418f4bd0ef40405a71d17ec106
         repo: openstack/oslo.serialization
     version: 2.23.0
+  - projects:
+      - hash: d4ae9c0f0998bfbf78a2660e9771a5993d290bee
+        repo: openstack/oslo.serialization
+    version: 2.24.0
 branches:
   - name: stable/queens
     location: 2.23.0
