--- a/deliverables/queens/oslo.privsep.yaml
+++ b/deliverables/queens/oslo.privsep.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: aa882953db2ce475402988eeb9572c69a84bd030
         repo: openstack/oslo.privsep
     version: 1.26.0
+  - projects:
+      - hash: 2221752ceae77ed8af3daa5e478c63ced677d3cf
+        repo: openstack/oslo.privsep
+    version: 1.27.0
 branches:
   - name: stable/queens
     location: 1.26.0
