--- a/deliverables/queens/release-test.yaml
+++ b/deliverables/queens/release-test.yaml
@@ -48,3 +48,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.11.1
+  - projects:
+      - hash: 17a88a7e98282a174879c4d2ad4c84d877d303d7
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.12.0
