--- a/deliverables/queens/aodh.yaml
+++ b/deliverables/queens/aodh.yaml
@@ -4,3 +4,8 @@ release-model: cycle-with-intermediary
 team: Telemetry
 type: service
 release-notes: https://docs.openstack.org/releasenotes/aodh/unreleased.html
+releases:
+  - version: 6.0.0
+    projects:
+      - repo: openstack/aodh
+        hash: dff1529d09fa8a1b79c4fd220a84c503f6263c2d
