--- a/deliverables/queens/storlets.yaml
+++ b/deliverables/queens/storlets.yaml
@@ -12,5 +12,12 @@ releases:
     projects:
       - repo: openstack/storlets
         hash: d02fb0b7a641657ead41eb676a1478d9005a9f9e
+  - version: 1.0.0
+    projects:
+      - repo: openstack/storlets
+        hash: 633c7b9e4894bc075fbc27ce17fe63540a622133
+branches:
+  - name: stable/queens
+    location: 1.0.0
 repository-settings:
   openstack/storlets: {}
