Add osprofiler release for stable/queens
Fix OSProfiler issue with greenthread spawn in Nova.

Change-Id: If3298536b9eaa81ee3ce999decd5b20bf3a2d869

--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 0895a4bb91beb0b97ed3711887f28d3e9dc8b9de
         repo: openstack/osprofiler
     version: 1.15.1
+  - projects:
+      - hash: 2eef34430671bac137a0e16d0d87197feb726464
+        repo: openstack/osprofiler
+    version: 1.15.2
 branches:
   - name: stable/queens
     location: 1.15.1
