pymod2pkg: Release 0.13.0
Add more translation rules for Freezer.

Change-Id: Ia252f6dbc7073e1545d8a7605613319f4ddf3936

--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -116,3 +116,7 @@ releases:
       - hash: de7ab9f2025f6783e0df13773937e067524edf97
         repo: openstack/pymod2pkg
     version: 0.12.0
+  - projects:
+      - hash: 956c6a36ca27f64a44ab34ad179f84d16bd56d7a
+        repo: openstack/pymod2pkg
+    version: 0.13.0
