TripleO ocata release
Depends-On: https://review.openstack.org/#/c/541710/
Change-Id: I7d046e3e554899f89434b3972d5b981004fd0c0f

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -44,5 +44,9 @@ releases:
       - hash: 7e65c96eceb2794c4d4f7fb5fbafe6188408f3a4
         repo: openstack/instack-undercloud
     version: 6.1.4
+  - projects:
+      - hash: aeac66c9ec7413f6cc80e045046ae82598d168e5
+        repo: openstack/instack-undercloud
+    version: 6.1.5
 team: tripleo
 type: other
