--- a/deliverables/ocata/os-apply-config.yaml
+++ b/deliverables/ocata/os-apply-config.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 9fa6f2dd4fe9a6f0414741d2e5c60ca7518f73e9
         repo: openstack/os-apply-config
     version: 6.1.2
+  - projects:
+      - hash: 7671343e5b7912bb152ef26e9076589f79a4a341
+        repo: openstack/os-apply-config
+    version: 6.1.3
 team: tripleo
 type: other
