--- a/deliverables/ocata/os-collect-config.yaml
+++ b/deliverables/ocata/os-collect-config.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 88f02627983bdd53b2e9bdfaa7066582dbe12e27
         repo: openstack/os-collect-config
     version: 6.1.2
+  - projects:
+      - hash: 9334e6815497a0d5b2bdcea87f9e0ba777689656
+        repo: openstack/os-collect-config
+    version: 6.1.3
 team: tripleo
 type: other
