--- a/deliverables/ocata/os-net-config.yaml
+++ b/deliverables/ocata/os-net-config.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 65ed87736599a94bd89fd706a6abc5c1825f421a
         repo: openstack/os-net-config
     version: 6.1.2
+  - projects:
+      - hash: 7c977645ab4ee4bc3ead6afbbdc8ef5cafd3a515
+        repo: openstack/os-net-config
+    version: 6.1.3
 team: tripleo
 type: other
