--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -62,5 +62,9 @@ releases:
       - hash: f9929aec65e545967a62161d76f2ed1db75f1941
         repo: openstack/puppet-tripleo
     version: 6.5.8
+  - projects:
+      - hash: 32903686463e3a8188ec3c2b332b52d7cc634a7e
+        repo: openstack/puppet-tripleo
+    version: 6.5.9
 team: tripleo
 type: other
