--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -47,5 +47,9 @@ releases:
       - hash: 1fa7fb6336f6f197bc2b4d81a70febc426e22692
         repo: openstack/tripleo-common
     version: 6.1.4
+  - projects:
+      - hash: f09efed4fdef60887a64b96291bcbbe596603066
+        repo: openstack/tripleo-common
+    version: 6.1.5
 team: tripleo
 type: other
