--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -72,5 +72,9 @@ releases:
       - hash: 2fe5baac2c90e44ae626c3dc2440770ddc5fcac9
         repo: openstack/tripleo-heat-templates
     version: 6.2.9
+  - projects:
+      - hash: c8195bde70f65ca1e7f1f0edf921b352cbfced9a
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.10
 team: tripleo
 type: other
