--- a/deliverables/ocata/tripleo-validations.yaml
+++ b/deliverables/ocata/tripleo-validations.yaml
@@ -38,6 +38,10 @@ releases:
       - hash: 97ae1217df387dbea828ee5f942def9217609676
         repo: openstack/tripleo-validations
     version: 5.6.3
+  - projects:
+      - hash: 04f4638ca1d833fa5691b54977cd985e4af788b1
+        repo: openstack/tripleo-validations
+    version: 5.6.4
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/ocata.html
