TripleO pike release
Depends-On: https://review.openstack.org/#/c/541448/
Change-Id: I1c08b8a7090adfa244fc994ffd6cf2556c3d5446

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -62,6 +62,10 @@ releases:
       - hash: 6b6b4b39917aa9b3e5de8008c5e15ea37de8ca48
         repo: openstack/instack-undercloud
     version: 7.4.8
+  - projects:
+      - hash: 900a198335c70566423cd2b48964d981e7ecb2e0
+        repo: openstack/instack-undercloud
+    version: 7.4.9
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
