--- a/deliverables/pike/os-apply-config.yaml
+++ b/deliverables/pike/os-apply-config.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: b70958677a775fb4e0c9fa1c22bdfe29e70aabd3
         repo: openstack/os-apply-config
     version: 7.2.2
+  - projects:
+      - hash: 71f52919f16f4839c0800273e3af6b688f3d0015
+        repo: openstack/os-apply-config
+    version: 7.2.3
 team: tripleo
 type: other
