--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: d71230766001743c9fac6faa683e3bdba98e3048
         repo: openstack/os-net-config
     version: 7.3.2
+  - projects:
+      - hash: 8c7dd0c014ae12de685458206a484bd4346da28d
+        repo: openstack/os-net-config
+    version: 7.3.3
 team: tripleo
 type: other
