--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -57,6 +57,10 @@ releases:
       - hash: ca118d9f93a269c2ba7667e8d62696d283086bb3
         repo: openstack/puppet-tripleo
     version: 7.4.8
+  - projects:
+      - hash: fecece15053e4d6857647520bf9e9b28ccd6d8d6
+        repo: openstack/puppet-tripleo
+    version: 7.4.9
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
