--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -50,6 +50,10 @@ releases:
       - hash: d582755c28d5a6aaa51225b2bc701d6e49f43277
         repo: openstack/python-tripleoclient
     version: 7.3.7
+  - projects:
+      - hash: 4ce1e6f69b370a5096d02f54b3861670cb3f4317
+        repo: openstack/python-tripleoclient
+    version: 7.3.8
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
