--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -70,6 +70,10 @@ releases:
       - hash: 5a812cd888c5f8259f3b7e123ff17a71b68ab860
         repo: openstack/tripleo-common
     version: 7.6.8
+  - projects:
+      - hash: 0b105e852d7b0e9356c5adff10a6835336f49c95
+        repo: openstack/tripleo-common
+    version: 7.6.9
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
