--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -63,6 +63,10 @@ releases:
       - hash: 0d85aa178874a27e6e514eb713581a5ebb998859
         repo: openstack/tripleo-heat-templates
     version: 7.0.8
+  - projects:
+      - hash: cd984bf592e0007da657c7bf1ca18e158b8ead87
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.9
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
