--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -39,6 +39,10 @@ releases:
       - hash: 7f5f87f8cce3f3db7c13f846d78ac00a25b8050c
         repo: openstack/tripleo-image-elements
     version: 7.0.2
+  - projects:
+      - hash: 310d3479c73824bfc503b853fec2149362a64a0b
+        repo: openstack/tripleo-image-elements
+    version: 7.0.3
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-image-elements/pike.html
