--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -47,6 +47,10 @@ releases:
       - hash: a2422e5832baf0c86ff1e1b27d23418f8c87b57b
         repo: openstack/tripleo-puppet-elements
     version: 7.0.4
+  - projects:
+      - hash: f81858672c0922fd7b40c60adf86037c4475e5b7
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.5
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-puppet-elements/pike.html
