expand on openstacksdk cycle highlights
Change-Id: I9e9ad347303a0cc0f6103d75cb9485e05450738a
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/python-openstacksdk.yaml
+++ b/deliverables/queens/python-openstacksdk.yaml
@@ -26,23 +26,18 @@ releases:
         repo: openstack/python-openstacksdk
         tarball-base: openstacksdk
     version: 0.11.2
-    highlights: |
-      Fixed a bug related to duplicate valid query parameters that manifested
-      in some openstackclient neutron commands.
   - projects:
       - hash: 8cdf409c3d6fc3639e85292c5692f92031b4a172
         repo: openstack/python-openstacksdk
         tarball-base: openstacksdk
     version: 0.11.3
-    highlights: |
-      Fixed a bug related to missing valid query parameters that manifested
-      in some openstackclient neutron commands.
 branches:
   - name: stable/queens
     location: 0.11.0
 cycle-highlights:
   - Merged code from shade, os-client-config and openstacksdk into a single
-    library.
+    library as part of an effort to unify and simplify our client-side
+    libraries.
   - Added support for making direct REST calls to all OpenStack services.
   - Updated pagination support to support all existing forms of pagination.
     Pagination now works automatically behind the scenes.
