--- a/deliverables/queens/monasca-common.yaml
+++ b/deliverables/queens/monasca-common.yaml
@@ -20,3 +20,10 @@ releases:
       - hash: 5585cd14702fe7c24878093dea4f0c13ef4abf8a
         repo: openstack/monasca-common
     version: 2.7.0
+  - projects:
+      - hash: 257784d7b70ae4bb692fc585f59a6d45b07fe01a
+        repo: openstack/monasca-common
+    version: 2.8.0
+branches:
+  - location: 2.8.0
+    name: stable/queens
