--- a/deliverables/queens/monasca-notification.yaml
+++ b/deliverables/queens/monasca-notification.yaml
@@ -12,3 +12,10 @@ releases:
       - hash: 8b6260e10f7cfbd204fc9bef9345f332160b1b08
         repo: openstack/monasca-notification
     version: 1.12.0
+  - projects:
+      - hash: 1a91c0d9a57912bbd10facc478fefb1dba51edfd
+        repo: openstack/monasca-notification
+    version: 1.13.0
+branches:
+  - location: 1.13.0
+    name: stable/queens
