--- a/deliverables/queens/monasca-ui.yaml
+++ b/deliverables/queens/monasca-ui.yaml
@@ -1,7 +1,6 @@
 ---
 launchpad: monasca
 release-model: cycle-with-intermediary
-release-type: python-pypi
 team: monasca
 type: horizon-plugin
 releases:
@@ -17,3 +16,10 @@ releases:
       - hash: 8aa1cccf29fdbba7fabaa3634ef534ac86267c1e
         repo: openstack/monasca-ui
     version: 1.11.0
+  - projects:
+      - hash: d58f0f66f319eacbc3e97d806d0a6d263ece9907
+        repo: openstack/monasca-ui
+    version: 1.12.0
+branches:
+  - location: 1.12.0
+    name: stable/queens
