--- a/deliverables/queens/swift.yaml
+++ b/deliverables/queens/swift.yaml
@@ -4,6 +4,9 @@ release-model: cycle-with-intermediary
 release-notes: https://docs.openstack.org/releasenotes/swift/current.html
 team: swift
 type: service
+branches:
+  - name: stable/queens
+    location: 2.17.0
 releases:
   - version: 2.16.0
     projects:
