--- a/deliverables/queens/solum-dashboard.yaml
+++ b/deliverables/queens/solum-dashboard.yaml
@@ -9,5 +9,8 @@ releases:
     projects:
       - repo: openstack/solum-dashboard
         hash: fe30c1b1f4cf4fed18a0af8a29e8b45cec14cbdf
+branches:
+  - location: 2.3.0
+    name: stable/queens
 repository-settings:
   openstack/solum-dashboard: {}
