--- a/deliverables/queens/neutron-vpnaas.yaml
+++ b/deliverables/queens/neutron-vpnaas.yaml
@@ -9,5 +9,8 @@ releases:
       - hash: 1ec25e8f6ffca003ba123f14a52350f4203a7e82
         repo: openstack/neutron-vpnaas
     version: 12.0.0
+branches:
+  - location: 12.0.0
+    name: stable/queens
 repository-settings:
   openstack/neutron-vpnaas: {}
