--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -32,5 +32,9 @@ releases:
       - hash: cf3665fe1c60d43aa39f1880e427875c9c571058
         repo: openstack/ironic
     version: 9.1.2
+  - projects:
+      - hash: 3b13b2b331ea1e2410ef7bbb8f3c94522884f027
+        repo: openstack/ironic
+    version: 9.1.3
 repository-settings:
   openstack/ironic: {}
