--- a/deliverables/ocata/ironic.yaml
+++ b/deliverables/ocata/ironic.yaml
@@ -24,5 +24,9 @@ releases:
       - hash: dfa2fb6dcd4e5030d5e1cac52ddbf43c9a181950
         repo: openstack/ironic
     version: 7.0.3
+  - projects:
+      - hash: bde3d3fb8692c2d4aa4e920b20dd19e05f8ce930
+        repo: openstack/ironic
+    version: 7.0.4
 repository-settings:
   openstack/ironic: {}
