--- a/deliverables/ocata/ironic-inspector.yaml
+++ b/deliverables/ocata/ironic-inspector.yaml
@@ -16,5 +16,9 @@ releases:
     projects:
       - repo: openstack/ironic-inspector
         hash: e4fb858b3cdd04e5eaf00ed1f8597204094ead63
+  - projects:
+      - hash: 53f44a7ccf8164d19031266a35e341cc557ee84a
+        repo: openstack/ironic-inspector
+    version: 5.0.2
 repository-settings:
   openstack/ironic-inspector: {}
