--- a/deliverables/ocata/ironic-ui.yaml
+++ b/deliverables/ocata/ironic-ui.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/ironic-ui
         hash: 565fc3f27881467a2b0a13c72d32acd8f24a4f7a
+  - projects:
+      - hash: 6c70c8ef6b104e121db0311aa035affc3680a00f
+        repo: openstack/ironic-ui
+    version: 2.2.2
 repository-settings:
   openstack/ironic-ui: {}
