--- a/deliverables/ocata/bifrost.yaml
+++ b/deliverables/ocata/bifrost.yaml
@@ -16,5 +16,9 @@ releases:
     projects:
       - repo: openstack/bifrost
         hash: fdde28ffb7183739509a222de2085b581d2c8b54
+  - projects:
+      - hash: 69c1f0f7ff2ecba1de5db34afd0e5352f8b71567
+        repo: openstack/bifrost
+    version: 3.1.1
 repository-settings:
   openstack/bifrost: {}
