--- a/deliverables/pike/ironic-lib.yaml
+++ b/deliverables/pike/ironic-lib.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 1fa0a5f5e1d7a44b6f5ee1558a31b8e0a47713da
         repo: openstack/ironic-lib
     version: 2.10.0
+  - projects:
+      - hash: 73dd958945fedadac80a481afc2497185661f0b0
+        repo: openstack/ironic-lib
+    version: 2.10.1
 branches:
   - name: stable/pike
     location: 2.9.0
