--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -12,8 +12,19 @@ releases:
       - hash: 76945299a86babcda300b073e1604ac0aeeb13d3
         repo: openstack/ironic
     version: 10.0.0
+  - projects:
+      - hash: a0e08d026badbb81dd956c1999176cc2be4f9220
+        repo: openstack/ironic
+    version: 10.1.0
+branches:
+  - location: 10.1.0
+    name: stable/queens
 cycle-highlights:
-  - Finished implementation of Ironic Rescue Mode. Users can repair instances,
+  - Introduced API to get, set and unset traits on nodes.
+  - Introduced new ansible deploy interface.
+  - Finished implementation of rescue mode. Users can repair instances,
     troubleshoot misconfigured nodes, lost SSH keys, etc.
+  - Added support for routed networks when using flat networking.
+  - Deprecated classic drivers in favor of hardware types.
 repository-settings:
   openstack/ironic: {}
