--- a/deliverables/queens/watcher.yaml
+++ b/deliverables/queens/watcher.yaml
@@ -3,6 +3,9 @@ launchpad: watcher
 release-model: cycle-with-intermediary
 team: watcher
 type: service
+branches:
+  - name: stable/queens
+    location: 1.8.0
 releases:
   - version: 1.5.0
     projects:
@@ -18,6 +21,11 @@ releases:
     projects:
       - repo: openstack/watcher
         hash: 072822d9209523b051bd766340e76a9df5d8b9d3
+        tarball-base: python-watcher
+  - version: 1.8.0
+    projects:
+      - repo: openstack/watcher
+        hash: 40a653215f37a52394d561742d7975a4be3b946d
         tarball-base: python-watcher
 repository-settings:
   openstack/watcher: {}
