Queens release candidate for watcher-dashboard
Change-Id: I81522d4adfa3881e1f145e6e7d03d699ccdc50b5

--- a/deliverables/queens/watcher-dashboard.yaml
+++ b/deliverables/queens/watcher-dashboard.yaml
@@ -4,6 +4,9 @@ release-model: cycle-with-intermediary
 release-type: python-pypi
 team: watcher
 type: horizon-plugin
+branches:
+  - name: stable/queens
+    location: 1.8.0
 releases:
   - version: 1.5.0
     projects:
@@ -17,5 +20,9 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: 1aae6fe0aa44363606cbfb23d35df9ee5da14615
+  - version: 1.8.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: 191d2dbd3ea1591146106385271ed9c86f7e7c14
 repository-settings:
   openstack/watcher-dashboard: {}
