--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -16,7 +16,19 @@ releases:
       - hash: f41e5565218fcd4614e68e2e2609c96f3a645c15
         repo: openstack/cinder
     version: 12.0.0.0b3
+  - projects:
+      - hash: b8a5ff5d7e2db680ba896c6c16753735c5cd6729
+        repo: openstack/cinder
+    version: 12.0.0.0rc1
 cycle-highlights:
-  - Support for attaching a single Cinder volume to multile VM instances.
+  - 'Support for attaching a single Cinder volume to multile VM instances.'
+  - 'Add ability to report backend state in service list.'
+  - 'Default policies moved to code from policy.json.'
+  - 'Migration from ConfKeyManagers fixed-key to Barbican.'
+  - 'Support for creating a volume from a backup.'
+  - 'Support for standardized over-provisioning calculations.'
 repository-settings:
   openstack/cinder: {}
+branches:
+  - location: 12.0.0.0rc1
+    name: stable/queens
