--- a/deliverables/_independent/ironic-tempest-plugin.yaml
+++ b/deliverables/_independent/ironic-tempest-plugin.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/ironic-tempest-plugin
         hash: d961a2ba3f1c0a4aa0d5c7f3b2b0342725cde89c
+  - projects:
+      - hash: e4cfb8bade562628feb404fb2740eac0768893e7
+        repo: openstack/ironic-tempest-plugin
+    version: 1.1.0
