Tagging trove for RC1
Tagged trove, python-troveclient and trove-dashboard
Added cycle-highlights

Change-Id: I2b9afe073af0be3d6ccd6fc6a7965dba8e362e23

--- a/deliverables/queens/python-troveclient.yaml
+++ b/deliverables/queens/python-troveclient.yaml
@@ -19,3 +19,5 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/python-troveclient: {}
+cycle-highlights:
+  - Migration to openstack client.
