--- a/deliverables/queens/trove.yaml
+++ b/deliverables/queens/trove.yaml
@@ -12,5 +12,19 @@ releases:
       - hash: fd5ad7f1122c6cff286f101dffbd5de45a5d51d8
         repo: openstack/trove
     version: 9.0.0.0b3
+  - projects:
+      - hash: 9e5186b95bba51d911a0de9e6d6bd412c478aef4
+        repo: openstack/trove
+    version: 9.0.0.0rc1
 repository-settings:
   openstack/trove: {}
+branches:
+  - location: 9.0.0.0rc1
+    name: stable/queens
+cycle-highlights:
+  - Currency for operating system level; full support for Xenial
+  - Currency for databases; MySQL 5.7, Vertica 9.0, Cassandra 3.11
+  - Currency of databases; DB2 11.1, Postgres 9.6
+  - Implement root-enable/root-disable for Redis
+  - Add support for the IBM Power architecture
+  - Migration to Zuul v3, policy-in-code, keystone v2 deprecation
