pymod2pkg: Release version 0.13.1
- Fix a translation rule for freezer-web-ui
- Fix a translation rule for APScheduler

Change-Id: Ie932240c033e1fbf192039510fe2cba312a02143

--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -120,3 +120,7 @@ releases:
       - hash: 956c6a36ca27f64a44ab34ad179f84d16bd56d7a
         repo: openstack/pymod2pkg
     version: 0.13.0
+  - projects:
+      - hash: aaf133418169a1636a1e7e5b1500ac3f46aa9215
+        repo: openstack/pymod2pkg
+    version: 0.13.1
