Adjust grammar in Blazar release note.
Small issue that we did not want to hold up the RC release
request on.

Change-Id: Ie5cdf4fc5602d5029c2b51ee7b7ce8045513d16c

--- a/deliverables/queens/blazar.yaml
+++ b/deliverables/queens/blazar.yaml
@@ -21,7 +21,7 @@ branches:
   - location: 1.0.0.0rc1
     name: stable/queens
 cycle-highlights:
-  - Support resource monitoring. Blazar can react resource failures
-    happened in its freepool.
+  - Support resource monitoring. Blazar can react when resource failures
+    happen in its freepool.
 repository-settings:
   openstack/blazar: {}
