--- a/deliverables/queens/ceilometer-powervm.yaml
+++ b/deliverables/queens/ceilometer-powervm.yaml
@@ -3,6 +3,9 @@ launchpad: ceilometer-powervm
 release-model: cycle-with-milestones
 team: Telemetry
 type: service
+branches:
+  - name: stable/queens
+    location: 6.0.0.0rc1
 releases:
   - projects:
       - repo: openstack/ceilometer-powervm
@@ -16,5 +19,9 @@ releases:
       - repo: openstack/ceilometer-powervm
         hash: a31d0fa44ac64e6168e86956c6ba17dcdae2dfd3
     version: 6.0.0.0b3
+  - projects:
+      - repo: openstack/ceilometer-powervm
+        hash: a31d0fa44ac64e6168e86956c6ba17dcdae2dfd3
+    version: 6.0.0.0rc1
 repository-settings:
   openstack/ceilometer-powervm: {}
