Congress dashboard Q-rc1 and stable branch
Change-Id: Ie57c10785f5cc10efefeb4168700982c0f02afcf

--- a/deliverables/queens/congress-dashboard.yaml
+++ b/deliverables/queens/congress-dashboard.yaml
@@ -13,5 +13,12 @@ releases:
     projects:
       - repo: openstack/congress-dashboard
         hash: 1e12c93aec41b2eb771471118db55c48dcc96f23
+  - version: 2.0.0.0rc1
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: 247f4d70b3b471dc26c1e4a047e8e3a5610eb9b7
 repository-settings:
   openstack/congress-dashboard: {}
+branches:
+  - location: 2.0.0.0rc1
+    name: stable/queens
