--- a/deliverables/queens/searchlight-ui.yaml
+++ b/deliverables/queens/searchlight-ui.yaml
@@ -16,6 +16,10 @@ releases:
     projects:
       - repo: openstack/searchlight-ui
         hash: 509ec5ab2eb3399b594748e4a028f3012b65c07d
+  - version: 4.0.0.0rc2
+    projects:
+      - repo: openstack/searchlight-ui
+        hash: 509ec5ab2eb3399b594748e4a028f3012b65c07d
 branches:
   - location: 4.0.0.0rc1
     name: stable/queens
